Began playing around with next gen of LightDB